[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/fonts-images/Dither2nd.png" type="Texture" id=1]
[ext_resource path="res://scenes/BattleScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/World.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/GameJam0_Battle.ogg" type="AudioStream" id=5]
[ext_resource path="res://addons/qodot/game_definitions/fgd/qodot_fgd.tres" type="Resource" id=6]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=8]
[ext_resource path="res://scripts/CONTROL.gd" type="Script" id=10]
[ext_resource path="res://addons/qodot/src/nodes/qodot_map.gd" type="Script" id=16]
[ext_resource path="res://assets/fonts-images/Map.png" type="Texture" id=19]
[ext_resource path="res://scenes/Map.tscn" type="PackedScene" id=20]

[sub_resource type="Shader" id=28]
code = "shader_type canvas_item;
// originally based on https://github.com/WittyCognomen/godot-psx-shaders-demo/blob/master/shaders/psx_dither_post.shader

uniform sampler2D dither_tex: hint_white;
uniform float col_depth = 30.0; //15.0
uniform bool dither_banding = true;

void fragment() {
	vec2 dith_size = vec2(textureSize(dither_tex,0)); // for GLES2: substitute for the dimensions of the dithering matrix
	vec2 buf_size = vec2(textureSize(TEXTURE,0));
	
	COLOR = texture(TEXTURE, SCREEN_UV);

	vec3 dith = texture(dither_tex, SCREEN_UV*(buf_size/dith_size)).rgb;
	dith -= 0.5;
	COLOR.rgb = round(COLOR.rgb*col_depth + dith * (dither_banding ? 1.0 : 0.0)) / col_depth;
}
"

[sub_resource type="ShaderMaterial" id=29]
shader = SubResource( 28 )
shader_param/col_depth = 30.0
shader_param/dither_banding = true
shader_param/dither_tex = ExtResource( 1 )

[sub_resource type="SpatialMaterial" id=386]
metallic_specular = 0.0

[node name="Control" type="Control" groups=["control"]]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 406, 145 )
script = ExtResource( 10 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
material = SubResource( 29 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 436, 239 )
size_flags_vertical = 2
stretch = true

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1600, 900 )
size_override_stretch = true
handle_input_locally = false
render_target_update_mode = 3

[node name="MAIN" type="Spatial" parent="ViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 21 )
__meta__ = {
"_editor_description_": "QODOT MAP Translation:(-1,0,1)"
}

[node name="player" parent="ViewportContainer/Viewport/MAIN" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000114858, -0.00435138, 0.00021708 )

[node name="Mesh" parent="ViewportContainer/Viewport/MAIN/player" index="0"]
software_skinning_transform_normals = false

[node name="arrow" parent="ViewportContainer/Viewport/MAIN/player/Mesh" index="0"]
software_skinning_transform_normals = false

[node name="World" parent="ViewportContainer/Viewport/MAIN" instance=ExtResource( 3 )]

[node name="Audio" type="Node" parent="ViewportContainer/Viewport/MAIN"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="ViewportContainer/Viewport/MAIN/Audio"]
stream = ExtResource( 5 )

[node name="QodotMap" type="Spatial" parent="ViewportContainer/Viewport/MAIN"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -1 )
visible = false
script = ExtResource( 16 )
map_file = "C:/Users/jack_/Documents/Godot/PompaDungeonRomp/scenes/trenchbroom/DungeonDX.map"
inverse_scale_factor = 16.0
entity_fgd = ExtResource( 6 )
base_texture_dir = "res://textures"
texture_file_extensions = PoolStringArray( "png" )
worldspawn_layers = [  ]
brush_clip_texture = "special/clip"
face_skip_texture = "special/skip"
texture_wads = [  ]
material_file_extension = "tres"
default_material = SubResource( 386 )
uv_unwrap_texel_size = 1.0
print_profiling_data = false
use_trenchbroom_group_hierarchy = false
tree_attach_batch_size = 16
set_owner_batch_size = 16

[node name="BattleScreen" parent="." instance=ExtResource( 2 )]

[node name="Map" parent="." instance=ExtResource( 20 )]
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="MapSprite" type="Sprite3D" parent="."]
transform = Transform( 12.5, 0, 0, 0, 1, 0, 0, 0, 12.5, 3.849, -0.1, -8 )
layers = 2
axis = 1
texture = ExtResource( 19 )

[connection signal="battle_signal" from="ViewportContainer/Viewport/MAIN/player" to="." method="on_battlestart" flags=7]

[editable path="ViewportContainer/Viewport/MAIN/player"]
